--- a/src/main/resources/views/PantallaModelo.fxml
+++ b/src/main/resources/views/PantallaModelo.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="720.0" minWidth="1280.0" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaModeloController">
+<BorderPane maxHeight="982.0" maxWidth="1512.0" minHeight="982.0" minWidth="1512.0" prefHeight="982.0" prefWidth="1512.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.PantallaModeloController">
    <top>
       <GridPane fx:id="paneHeader" maxHeight="100.0" minHeight="100.0" minWidth="1512.0" prefHeight="100.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
         <columnConstraints>
