--- a/src/main/resources/views/PaneListadoGenero.fxml
+++ b/src/main/resources/views/PaneListadoGenero.fxml
@@ -17,7 +17,7 @@
    <children>
       <VBox prefHeight="882.0" prefWidth="1262.0" style="-fx-background-color: #E9E9E9;" AnchorPane.topAnchor="0.0">
          <children>
-            <ScrollPane hbarPolicy="NEVER" pannable="true" vbarPolicy="NEVER">
+            <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" pannable="true" vbarPolicy="NEVER">
                <content>
                   <GridPane prefHeight="942.0" prefWidth="1200.0" style="-fx-background-color: #3B3B3B; -fx-background-radius: 12;" vgap="25.0">
                      <columnConstraints>
